add syft event as dep

--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -6,9 +6,18 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "pydantic[email]>=2.10.4",
+    "syft-event",
     "typing-extensions>=4.12.2",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv.sources]
+syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
+
+[dependency-groups]
+dev = [
+    "pip>=25.0",
+]
