--- a/exp/pyproject.toml
+++ b/exp/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "datamodel-code-generator>=0.27.2",
     "protobuf>=5.29.3",
     "pycapnp>=2.0.0",
+    "pydantic>=2.10.6",
+    "pyyaml>=6.0.2",
 ]
