Add storage layer for spec files and indexes
Co-authored-by: Shubham Gupta <11032835+shubham3121@users.noreply.github.com>
Co-authored-by: khoaguin <dkn.work@protonmail.com>
Co-authored-by: S Rasswanth <43314053+rasswanth-s@users.noreply.github.com>

--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -7,7 +7,11 @@ requires-python = ">=3.9"
 dependencies = [
     "pydantic[email]>=2.10.4",
     "typing-extensions>=4.12.2",
+    "syft-core",
 ]
+
+[tool.uv.sources]
+syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", branch = "main" }
 
 [build-system]
 requires = ["hatchling"]
