--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -13,6 +13,11 @@ dependencies = [
     "pyyaml>=6.0.2",
 ]
 
+[tool.uv]
+dev-dependencies = [
+    "pytest>=8.3.4",
+]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
