--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pydantic[email]>=2.10.4",
     "syft-event",
     "typing-extensions>=4.12.2",
+    "syft-runtime",
 ]
 
 [build-system]
@@ -17,9 +18,14 @@ build-backend = "hatchling.build"
 
 [tool.uv.sources]
 syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
-syft-runtime = { path = "../syft-runtime" }
+syft-runtime = { workspace = true }
 
 [dependency-groups]
 dev = [
+    "ipykernel>=6.29.5",
+    "jupyter>=1.1.1",
     "pip>=25.0",
 ]
+
+[tool.uv.workspace]
+members = ["../syft_runtime"]
