--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "loguru>=0.7.3",
     "pydantic[email]>=2.10.4",
+    "rich>=13.9.4",
     "syft-event",
     "typing-extensions>=4.12.2",
 ]
