Add YAML support and enhance RDSFileStore functionality - Add CRUD Methods      create, read, update ,delete - Added Query Methods
Co-authored-by: Tauquir <30658453+itstauq@users.noreply.github.com>
Co-authored-by: Shubham Gupta <11032835+shubham3121@users.noreply.github.com>
Co-authored-by: khoaguin <dkn.work@protonmail.com>
Co-authored-by: Yash Gorana <yash.gorana@hotmail.com>

--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "pydantic[email]>=2.10.4",
     "typing-extensions>=4.12.2",
     "syft-core",
+    "pyyaml>=6.0.2",
 ]
 
 [tool.uv.sources]
@@ -16,3 +17,8 @@ syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+]
