fix precommit + remove old files

--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -22,6 +22,7 @@ packages = ["src/syft_rds"]
 [tool.uv]
 dev-dependencies = [
     "pip>=25.0.1",
+    "pre-commit>=4.1.0",
     "pytest>=8.3.4",
 ]
 
