--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "loguru>=0.7.3",
+    "ipywidgets>=8.1.5",
     "pydantic[email]>=2.10.4",
     "rich>=13.9.4",
     "syft-event",
@@ -24,7 +25,19 @@ dev-dependencies = [
     "pip>=25.0.1",
     "pre-commit>=4.1.0",
     "pytest>=8.3.4",
+    "syft-runtime",
 ]
 
 [tool.uv.sources]
 syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
+syft-runtime = { workspace = true }
+
+[dependency-groups]
+dev = [
+    "ipykernel>=6.29.5",
+    "jupyter>=1.1.1",
+    "pip>=25.0",
+]
+
+[tool.uv.workspace]
+members = ["../syft_runtime"]
