--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -19,6 +19,7 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/syft_rds"]
+include = ["src/syft_rds/assets/*"]
 
 [tool.uv]
 dev-dependencies = [
