--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,9 +22,7 @@ repos:
         always_run: true
       - id: name-tests-test
         always_run: true
-        exclude: ^syft-rds/tests/integration/assets/
-      - id: requirements-txt-fixer
-        always_run: true
+        exclude: ^(syft-rds/tests/integration/assets/|syft-rds/tests/mocks.py)
       - id: mixed-line-ending
         args: ["--fix=lf"]
 
