--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "typing-extensions>=4.12.2",
     "pyyaml>=6.0.2",
     "setuptools>=75.8.0",
+    "typer>=0.15.1",
 ]
 
 [tool.uv]
