--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -21,6 +21,7 @@ dev-dependencies = [
     "pytest>=8.3.4",
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
+    "pandas>=1.4.0",
 ]
 
 [tool.uv.sources]
