--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -23,6 +23,9 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "ipywidgets>=8.1.5",
     "pandas>=1.4.0",
+    "httpx>=0.28.1",
+    "pytest-asyncio>=0.25.3",
+    "syftbox>=0.3.5",
 ]
 
 [tool.uv.sources]
