--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,7 +18,7 @@ jobs:
         
     - name: Install uv
       run: |
-        pip install uv
+        pip install uv just
         
     - name: Set up test environment
       run: |
