--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,16 +18,17 @@ jobs:
         
     - name: Install uv
       run: |
-        pip install uv just
+        pip install uv
         
-    - name: Set up test environment
-      run: |
-        just setup-test-env
         
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y docker.io
+        sudo apt-get install -y docker.io just
+
+      - name: Set up test environment
+      run: |
+        just setup-test-env
 
     - name: Run unit tests
       run: |
