--- a/.github/workflows/pr-tests-rds.yml
+++ b/.github/workflows/pr-tests-rds.yml
@@ -26,3 +26,13 @@ jobs:
     uses: ./.github/workflows/pr-tests-base.yml
     with:
       test-type: test-unit
+
+  call-pr-tests-e2e:
+    uses: ./.github/workflows/pr-tests-base.yml
+    with:
+      test-type: test-e2e
+
+  # call-pr-tests-notebooks:
+  #   uses: ./.github/workflows/pr-tests-base.yml
+  #   with:
+  #     test-type: test-notebooks
