--- a/.github/workflows/pr-tests-rds.yml
+++ b/.github/workflows/pr-tests-rds.yml
@@ -32,7 +32,7 @@ jobs:
     with:
       test-type: test-e2e
 
-  # call-pr-tests-notebooks:
-  #   uses: ./.github/workflows/pr-tests-base.yml
-  #   with:
-  #     test-type: test-notebooks
+  call-pr-tests-notebooks:
+    uses: ./.github/workflows/pr-tests-base.yml
+    with:
+      test-type: test-notebooks
