--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -11,12 +11,14 @@ dependencies = [
     "syft-core",
     "syft-event",
     "syft-rpc",
-    "syftbox",
     "typing-extensions>=4.12.2",
     "pyyaml>=6.0.2",
     "typer>=0.12.5",
     "jupyter>=1.1.1",
     "nh3>=0.2.21",
+    "wcmatch==10.0",
+    "gunicorn==23.0.0",
+    "uvicorn==0.34.0",
 ]
 
 [tool.uv]
@@ -28,13 +30,14 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "pandas>=1.4.0",
     "httpx>=0.28.1",
+    "syftbox",
 ]
 
 [tool.uv.sources]
 syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
 syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
 syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", rev = "main" }
-syftbox = { git = "https://github.com/OpenMined/syft", rev = "main" }
+syftbox = { git = "https://github.com/OpenMined/syft.git", rev = "main" }
 
 [build-system]
 requires = ["hatchling"]
