--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -44,7 +44,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/syft_rds"]
+packages = ["src/syft_rds", "src/syft_runtime"]
 include = ["src/syft_rds/assets/*"]
 
 [project.scripts]
