--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -17,8 +17,6 @@ dependencies = [
     "jupyter>=1.1.1",
     "nh3>=0.2.21",
     "wcmatch==10.0",
-    "gunicorn==23.0.0",
-    "uvicorn==0.34.0",
 ]
 
 [tool.uv]
@@ -44,7 +42,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/syft_rds", "src/syft_runtime"]
+packages = ["src/syft_rds"]
 include = ["src/syft_rds/assets/*"]
 
 [project.scripts]
