--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "typer>=0.12.5",
     "jupyter>=1.1.1",
     "nh3>=0.2.21",
-    "wcmatch==10.0",
 ]
 
 [tool.uv]
@@ -28,7 +27,7 @@ dev-dependencies = [
     "ipykernel>=6.29.5",
     "pandas>=1.4.0",
     "httpx>=0.28.1",
-    "syftbox",  # just for testing e2e
+    "syftbox",  # only needed for testing e2e
 ]
 
 [tool.uv.sources]
