--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -41,8 +41,16 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/syft_rds"]
-include = ["src/syft_rds/assets/*"]
+only-include = ["src"]
+exclude = ["src/**/__pycache__"]
+
+[tool.hatch.build.targets.sdist]
+include = [
+  "src",
+  "pyproject.toml",
+  "/README.md",
+]
+exclude = ["src/**/__pycache__"]
 
 [project.scripts]
 syft-rds = "syft_rds.cli:app"
