--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -14,8 +14,9 @@ dependencies = [
     "typing-extensions>=4.12.2",
     "pyyaml>=6.0.2",
     "typer>=0.12.5",
-    "jupyter>=1.1.1",
     "nh3>=0.2.21",
+    "jinja2>=3.1.6",
+    "ipython>=8.18.1",
 ]
 
 [tool.uv]
@@ -24,7 +25,6 @@ dev-dependencies = [
     "pytest>=8.3.4",
     "pytest-asyncio>=0.25.3",
     "jupyter>=1.1.1",
-    "ipykernel>=6.29.5",
     "pandas>=1.4.0",
     "httpx>=0.28.1",
     "syftbox",  # only needed for testing e2e
@@ -41,6 +41,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
+packages = ["src/syft_rds"]
 only-include = ["src"]
 exclude = ["src/**/__pycache__"]
 
