--- a/syft-rds/pyproject.toml
+++ b/syft-rds/pyproject.toml
@@ -5,35 +5,32 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "loguru>=0.7.3",
-    "pydantic[email]>=2.10.4",
-    "rich>=13.9.4",
-    "syft-core",
-    "syft-event",
-    "syft-rpc",
-    "typing-extensions>=4.12.2",
-    "pyyaml>=6.0.2",
-    "typer>=0.12.5",
-    "nh3>=0.2.21",
-    "jinja2>=3.1.6",
-    "ipython>=8.18.1",
+  "loguru>=0.7.3",
+  "pydantic[email]>=2.10.4",
+  "rich>=13.9.4",
+  "syft-core==0.2.3",
+  "syft-event==0.2.0",
+  "syft-rpc==0.2.0",
+  "typing-extensions>=4.12.2",
+  "pyyaml>=6.0.2",
+  "typer>=0.12.5",
+  "nh3>=0.2.21",
+  "jinja2>=3.1.6",
+  "ipython>=8.18.1",
 ]
 
 [tool.uv]
 dev-dependencies = [
-    "pre-commit>=4.1.0",
-    "pytest>=8.3.4",
-    "pytest-asyncio>=0.25.3",
-    "jupyter>=1.1.1",
-    "pandas>=1.4.0",
-    "httpx>=0.28.1",
-    "syftbox",  # only needed for testing e2e
+  "pre-commit>=4.1.0",
+  "pytest>=8.3.4",
+  "pytest-asyncio>=0.25.3",
+  "jupyter>=1.1.1",
+  "pandas>=1.4.0",
+  "httpx>=0.28.1",
+  "syftbox",                # only needed for testing e2e
 ]
 
 [tool.uv.sources]
-syft-event = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-event", rev = "main" }
-syft-rpc = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-rpc", rev = "main" }
-syft-core = { git = "https://github.com/OpenMined/syft-extras.git", subdirectory = "packages/syft-core", rev = "main" }
 syftbox = { git = "https://github.com/OpenMined/syft.git", rev = "main" }
 
 [build-system]
@@ -46,11 +43,7 @@ only-include = ["src"]
 exclude = ["src/**/__pycache__"]
 
 [tool.hatch.build.targets.sdist]
-include = [
-  "src",
-  "pyproject.toml",
-  "/README.md",
-]
+include = ["src", "pyproject.toml", "/README.md"]
 exclude = ["src/**/__pycache__"]
 
 [project.scripts]
