--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,12 +35,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["syft_rds"]
-exclude = ["syft_rds/**/__pycache__"]
+packages = ["src/syft_rds"]
+exclude = ["src/**/__pycache__"]
 
 [tool.hatch.build.targets.sdist]
-include = ["syft_rds", "pyproject.toml", "README.md"]
-exclude = ["syft_rds/**/__pycache__"]
+include = ["src/syft_rds", "pyproject.toml", "README.md"]
+exclude = ["src/syft_rds/**/__pycache__"]
 
 [project.scripts]
 syft-rds = "syft_rds.cli:app"
