test integration in CI

--- a/.github/workflows/pr-tests-rds.yml
+++ b/.github/workflows/pr-tests-rds.yml
@@ -27,6 +27,11 @@ jobs:
     with:
       test-type: test-unit
 
+  call-pr-tests-integration:
+    uses: ./.github/workflows/pr-tests-base.yml
+    with:
+      test-type: test-integration
+
   call-pr-tests-e2e:
     uses: ./.github/workflows/pr-tests-base.yml
     with:
