--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "syft-rds"
+name = "syft-data-science"
 version = "0.1.3"
 description = "Doing remote data science with SyftBox"
 readme = "README.md"
@@ -18,7 +18,7 @@ dependencies = [
   "jinja2>=3.1.6",
   "ipython>=8.18.1",
   "syft-datasets",
-  "syft-runtime",
+  "syft-runtimes",
 ]
 
 [tool.uv]
@@ -57,4 +57,4 @@ members = ["packages/*"]
 
 [tool.uv.sources]
 syft-datasets = { workspace = true }
-syft-runtime = { workspace = true }
+syft-runtimes = { workspace = true }
