--- a/packages/syft-runtimes/pyproject.toml
+++ b/packages/syft-runtimes/pyproject.toml
@@ -9,6 +9,8 @@ authors = [
 requires-python = ">=3.9"
 dependencies = [
     "loguru>=0.7.3",
+    "pydantic>=2.11.7",
+    "syft-core>=0.2.5",
     "syft-notebook-ui",
 ]
 
