--- a/.github/workflows/pr-tests-syft-data-science.yml
+++ b/.github/workflows/pr-tests-syft-data-science.yml
@@ -36,3 +36,8 @@ jobs:
     uses: ./.github/workflows/pr-tests-base.yml
     with:
       test-type: test-syft-datasets
+
+  call-pr-tests-syft-runtimes:
+    uses: ./.github/workflows/pr-tests-base.yml
+    with:
+      test-type: test-syft-runtimes
