--- a/packages/syft-rds/pyproject.toml
+++ b/packages/syft-rds/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
     "loguru>=0.7.3",
     "pydantic[email]>=2.10.4",
     "rich>=14.0.0",
-    "syft-core==0.2.5",
-    "syft-event==0.2.7",
-    "syft-rpc==0.2.4",
+    "syft-core>=0.2.8",
+    "syft-event==0.2.8",
+    "syft-rpc>=0.2.8",
     "typing-extensions>=4.14.0",
     "pyyaml>=6.0.2",
     "typer>=0.12.5",
